# Blinter-simple-output

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: lint.yml  testrun.yml  unittest.yml
src/blinter_simple_output/: __main__.py  formatter.py
tests/: conftest.py  test_expand_dir.py  test_formatter.py
tests/data/: README.md
tests/data/batchfiles/good/: good.cmd
