[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "blinter-simple-output"
version = "0.1.0"
description = """
Output `.cmd` and `.bat` lint results in a simple, line-by-line style.
This tool uses the Blinter Programmatic API from tboy1337/Blinter.
"""
license = { text = "AGPL-3.0-or-later" }
requires-python = ">=3.9"
dependencies = [
    "blinter>=1.0.82",
]

[project.scripts]
blinter-simple-output = "blinter_simple_output.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.ruff]
target-version = "py311"
line-length = 88
fix = false

[tool.ruff.lint]
select = [
  "E",    # pycodestyle errors
  "F",    # pyflakes
  "W",    # pycodestyle warnings
  "B",    # flake8-bugbear
  "I",    # isort
  "UP",   # pyupgrade
  "SIM",  # flake8-simplify
  "C4",   # flake8-comprehensions
  "T20",  # flake8-print
  "RET",  # flake8-return
  "ARG",  # flake8-unused-arguments
  "PTH",  # flake8-use-pathlib
  "RUF",  # ruff-specific rules
]

[tool.uv]
package=true

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.14.13",
]
